feat fix  readme

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -34,7 +34,7 @@
             <button class="load-more">Show me more</button>
         </main>
         <footer class="footer">
-            <a href="https://github.com/Peccopa" target="_blank">
+            <a href="https://github.com/kurbanou" target="_blank">
                 <p>GitHub</p>
             </a>
             <a href="https://calendar.google.com/calendar/" target="_blank">
